Add newly created billing address to payment request state.

BUG=724544

Review-Url: https://codereview.chromium.org/2900163002
Cr-Commit-Position: refs/heads/master@{#474041}

Former-commit-id: 7ddf70a46f85e38799402f2ffce5c10ec35b4187